# pythonProject3

./: .flake8  .gitignore  README.md  pyproject.toml
src/: generators.py  main.py  masks.py  processing.py  widget.py
tests/: conftest.py  test_generators.py  test_masks.py  test_processing.py  test_widget.py
